@@ -15,8 +15,8 @@ OBJFILES = \
 	$(OBJDIR)\be_decl.obj \
 	$(OBJDIR)\be_enum.obj \
 	$(OBJDIR)\be_enum_val.obj \
-	$(OBJDIR)\be_event.obj \
-	$(OBJDIR)\be_event_fwd.obj \
+	$(OBJDIR)\be_eventtype.obj \
+	$(OBJDIR)\be_eventtype_fwd.obj \
 	$(OBJDIR)\be_exception.obj \
 	$(OBJDIR)\be_expression.obj \
         $(OBJDIR)\be_factory.obj \
