@@ -1,3 +1,14 @@
+Wed Sep 25 12:24:11 2002  Jeff Parsons <parsons@cs.wustl.edu>
+
+        * TAO_IDL/Makefile.BE:
+        * TAO_IDL/Makefile.FE:
+        * TAO_IDL/TAO_IDL_BE.bor:
+        * TAO_IDL/TAO_IDL_FE.bor:
+        * TAO_IDL/ast/Makefile.am:
+        * TAO_IDL/be/Makefile.am:
+
+	  Fixed typos.
+
 Wed Sep 25 11:12:59 2002  Jeff Parsons <parsons@cs.wustl.edu>
 
         * TAO_IDL/ast/ast_eventtype.cpp:
